--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.rider": "3.0.24",
     "com.unity.memoryprofiler": "0.7.1-preview.1",
     "com.unity.recorder": "3.0.3",
+    "com.unity.render-pipelines.universal": "13.1.8",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.2",
